--- a/back/backend/pom.xml
+++ b/back/backend/pom.xml
@@ -109,7 +109,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>org.example.Main</mainClass>
+                            <mainClass>org.example.Matcha</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
